[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llama-index-tools-quercle"
version = "0.1.0"
description = "Quercle tools for LlamaIndex - AI-powered web fetch and search"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Quercle", email = "support@quercle.dev" }]
keywords = ["llamaindex", "quercle", "web-search", "ai", "llm", "tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "quercle>=0.1.3",
    "llama-index-core>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.9",
    "ty>=0.0.1a7",
]

[project.urls]
Homepage = "https://github.com/quercledev/quercle-llama-index"
Repository = "https://github.com/quercledev/quercle-llama-index"

[tool.hatch.build.targets.wheel]
packages = ["llama_index"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "ANN"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
